--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -3,6 +3,6 @@
     <item android:id="@+id/settings" android:title="@string/settings" />
     <item android:id="@+id/lock" android:title="@string/lock" />
     <item android:id="@+id/unlock" android:title="@string/unlock" android:visible="false" />
+	<item android:id="@+id/preferences" android:title="@string/configure" />
     
-
 </menu>
